--- a/css.css
+++ b/css.css
@@ -6,7 +6,7 @@
 
 .topWrapper {
   width: 100%;
-  height: 700px;
+  height: 600px;
   overflow: hidden;
 }
 
@@ -20,12 +20,13 @@
 
 .introHeading {
   padding: 80px;
-  /* align-items: center; */
-  /* align-content: center; */
+  text-align: center;
 }
 
 .introHeadingTop {
   font-size: x-large;
+  padding: 8px 0;
+  font-weight: bold;
 }
 
 .introHeadingMessage {
@@ -34,6 +35,8 @@
 
 .products-container {
   display: flex;
+  justify-content: center;
+  padding-bottom: 100px;
 }
 
 .product-item {
@@ -41,7 +44,47 @@
 
   padding: 10px;
 }
+
+.name {
+  margin-top: 20px;
+  font-weight: bold;
+}
+
+.description {
+  color: #666666;
+}
+
+.product-item div {
+  text-align: center;
+}
+
+.product-item button {
+  margin: 20px 100px;
+  width: 100px;
+  color: white;
+  padding: 6px 0;
+  background-color: #000000;
+  border-radius: 20px;
+  border: none;
+}
 .product-item img {
   width: 700px;
   height: 200px;
+}
+
+.footer {
+  height: 250px;
+  width: 100%;
+  color: aliceblue;
+  background-color: #000000;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+}
+
+.footer img {
+  height: 50px;
+  width: 100px;
+  margin: 0 auto;
 }
