--- a/css.css
+++ b/css.css
@@ -7,6 +7,7 @@
   padding: 30px 80px;
   display: flex;
   justify-content: space-between;
+  background: rgba(102, 102, 102, 0.3);
 }
 
 .headerLogo {
