--- a/js/modal/css.css
+++ b/js/modal/css.css
@@ -29,19 +29,55 @@
 }
 
 .__modal-modal {
-  width: 80%;
-  min-height: 50px;
+  width: 30%;
   background: white;
   position: relative;
+  border-radius: 5px;
 }
 
 .__modal-close-btn {
   position: absolute;
-  top: 5px;
-  right: 5px;
+  top: 10px;
+  right: 15px;
   cursor: pointer;
+  height: 30px;
+  width: 30px;
+  background-color: rgba(0, 0, 0, 0.5);
+  border-radius: 5px;
+  color: white;
+  line-height: 28px;
+}
+.__modal-close-btn:hover {
+  background-color: rgba(0, 0, 0, 0.7);
 }
 
 .__modal-body {
-  border: 1px solid green;
+  padding: 50px 20px;
+}
+
+.__modal-body button {
+  padding: 8px 20px;
+  margin: 20px 10px 5px 10px;
+  border-radius: 20px;
+  border: none;
+  box-shadow: 1px 1px 4px 1px rgba(0, 0, 0, 0.25);
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.__modal-cancel {
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
+.__modal-cancel:hover {
+  background-color: rgba(0, 0, 0, 0.3);
+}
+
+.__modal-confirm {
+  background-color: rgba(0, 0, 0, 0.6);
+  color: white;
+}
+
+.__modal-confirm:hover {
+  background-color: rgba(0, 0, 0, 1);
 }
