--- a/css.css
+++ b/css.css
@@ -44,10 +44,23 @@
   color: #666666;
 }
 
+.incart {
+  padding: 150px 0;
+}
+
+.my-cart-container {
+  padding: 30px 0;
+
+  text-align: center;
+  font-size: large;
+  font-weight: bold;
+}
+
 .products-container {
   display: flex;
   justify-content: center;
   padding-bottom: 100px;
+  /* padding: 200px 0px; */
 }
 
 .product-item {
