--- a/css.css
+++ b/css.css
@@ -119,6 +119,16 @@
   height: 200px;
 }
 
+.buy-cart-container {
+  width: 100%;
+  text-align: center;
+}
+.buy-cart {
+  padding: 10px 20px;
+  border-radius: 20px;
+  cursor: pointer;
+}
+
 .footer {
   height: 250px;
   width: 100%;
