fix/control confirm

--- a/js/modal/css.css
+++ b/js/modal/css.css
@@ -92,3 +92,7 @@
 .__modal-confirm:hover {
   background-color: rgba(0, 0, 0, 1);
 }
+
+.__modal-confirm:disabled {
+  background-color: rgba(0, 0, 0, 0.1);
+}
